--- a/styles.css
+++ b/styles.css
@@ -22,12 +22,6 @@ header {
     box-sizing: border-box;
 }
 
-.logo {
-    font-size: 1.5em; /* Adjust this value as needed */
-    font-weight: bold; /* Optional: make the text bold */
-    margin-left: 10px; /* Optional: add some space on the left */
-}
-
 .nav-container {
     display: flex;
     justify-content: flex-end;
@@ -63,4 +57,10 @@ footer {
     color: #fff;
     text-align: center;
     padding: 10px 0;
+}
+
+.logo {
+    font-size: 2.5em;
+    font-weight: bold;
+    margin-left: 10px;
 }
