--- a/styles.css
+++ b/styles.css
@@ -17,14 +17,21 @@ header {
     padding: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     box-sizing: border-box;
 }
 
+.logo {
+    font-size: 2.5em;
+    font-weight: bold;
+    margin-right: auto;
+}
+
 .nav-container {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    flex-grow: 1;
 }
 
 nav ul {
@@ -57,10 +64,4 @@ footer {
     color: #fff;
     text-align: center;
     padding: 10px 0;
-}
-
-.logo {
-    font-size: 2.5em;
-    font-weight: bold;
-    margin-left: 10px;
 }
