--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ header {
     padding: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
 }
@@ -30,8 +30,7 @@ header {
 
 .nav-container {
     display: flex;
-    justify-content: center;
-    flex-grow: 1;
+    justify-content: flex-end;
 }
 
 nav ul {
@@ -65,3 +64,9 @@ footer {
     text-align: center;
     padding: 10px 0;
 }
+.logo {
+    font-size: 2.5em;
+    font-weight: bold;
+    margin-left: 10px;
+}
+
