--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ header {
     padding: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     box-sizing: border-box;
 }
@@ -30,7 +30,8 @@ header {
 
 .nav-container {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    flex-grow: 1;
 }
 
 nav ul {
@@ -64,9 +65,3 @@ footer {
     text-align: center;
     padding: 10px 0;
 }
-.logo {
-    font-size: 2.5em;
-    font-weight: bold;
-    margin-left: 10px;
-}
-
