Align navigation to the right for improved layout consistency

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ header {
 
 .nav-container {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     flex-grow: 1;
 }
 
