--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,11 @@ header {
     margin-right: auto;
 }
 
+.logo a {
+    text-decoration: none;
+    color: inherit;
+}
+
 .nav-container {
     display: flex;
     justify-content: flex-end;
