--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ nav ul li a {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: grey;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -83,14 +83,14 @@ nav ul li a {
 }
 
 .dropdown-content li a {
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
 
 .dropdown-content li a:hover {
-    background-color: #ddd;
+    background-color: #555;
 }
 
 .dropdown:hover .dropdown-content {
