--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 /* styles.css */
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: Georgia, 'Times New Roman', serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
@@ -69,7 +69,7 @@ nav ul li a {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: grey;
+    background-color: rgb(79, 169, 211);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
