--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ nav ul li a {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: rgb(79, 169, 211);
+    background-color: rgb(54, 196, 196);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -100,6 +100,8 @@ nav ul li a {
 main {
     padding: 20px;
     margin-top: 60px;
+    background-color: #222222;
+    color: white;
 }
 
 section {
