--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ nav ul li a {
 
 main {
     padding: 20px;
-    margin-top: 60px;
+    margin-top: 80px;
     background-color: #222222;
     color: white;
 }
@@ -113,4 +113,21 @@ footer {
     color: #fff;
     text-align: center;
     padding: 10px 0;
+}
+
+.climate-section {
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    flex-direction: row-reverse;
+}
+
+.climate-content {
+    flex: 1;
+}
+
+.climate-section img {
+    max-width: 50%;
+    height: auto;
 }
