--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,10 @@ section {
     margin-bottom: 20px;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Pixelify Sans', sans-serif;
+}
+
 h2 {
     text-decoration: underline;
     text-decoration-color: rgb(54, 196, 196);
@@ -500,8 +504,8 @@ a:hover {
     gap: 2rem;
     justify-content: center;
     margin-bottom: 2rem;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 .info-card {
