--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 /* styles.css */
 
 body {
-    font-family: Georgia, 'Times New Roman', serif;
+    font-family: 'IBM Plex Mono', Georgia, 'Times New Roman', serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
