Refactor section styles to improve consistency; rename dark background class to trstd-org-section and update background color for better contrast.

--- a/css/styles.css
+++ b/css/styles.css
@@ -580,8 +580,8 @@ footer {
 }
 
 
-.dark-bg-section {
-    background-color: #2d3748;
+.trstd-org-section {
+    background-color: #cbf3ee;
     color: #ffffff; /* Added white text for better contrast */
 }
 
